<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!-- Fondo Degradado -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        />

    <!-- Fondo Blanco -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/whiteradius_background"
        />

    <!-- Logo -->
    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="500dp"
        android:layout_height="315dp"
        android:scaleY=".5"
        android:scaleX=".5"
        android:layout_marginTop="-350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/logov2"/>

    <!-- Texto Bienvenida -->
    <TextView
        android:id="@+id/tvLoginBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textColor="@color/naranja"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="-50dp"
        />

    <!-- Campos de email y contraseña -->
    <LinearLayout
        android:id="@+id/llcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/correo32"
            tools:ignore="MissingConstraints"
            android:layout_marginEnd="13dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginCorreo"
            android:layout_width="217dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:hint="@string/correo"
            android:textAlignment="center"
            android:textColorHint="@color/blanco"
            android:textColor="@color/blanco"
            android:textSize="14dp"
            android:background="@drawable/campos_background"
            tools:ignore="MissingConstraints">
        </com.google.android.material.textfield.TextInputEditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/llcorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_lock_24"
            tools:ignore="MissingConstraints"
            android:layout_marginEnd="13dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="217dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/blanco"
            android:textSize="14dp"
            android:textColor="@color/blanco"
            android:background="@drawable/campos_background"
            tools:ignore="MissingConstraints">

        </com.google.android.material.textfield.TextInputEditText>
    </LinearLayout>

    <!-- Botón -->
    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="27dp"
        android:text="@string/btnSesion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llpassword"
        android:textSize="18dp"
        android:backgroundTint="@color/naranja"
        tools:ignore="MissingConstraints" />

    <!-- Ajoloyork -->
    <ImageView
        android:layout_width="193.52dp"
        android:layout_height="177dp"
        android:background="@drawable/ajolotecartelv3"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- ¿Aún no tienes una cuenta? -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aunno"
        android:textColor="@color/azul_oscuro"
        android:textSize="12dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Registrarse -->
    <Button
        android:id="@+id/btnLoginRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#00015266"
        android:text="@string/resgistrarse"
        android:textColor="@color/azul_oscuro"
        android:textStyle="bold"
        android:textSize="14dp"
        android:layout_marginBottom="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>