<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogOut">

    <!-- Fondo Degradado -->

    <!-- Logo Gota -->
    <LinearLayout
        android:id="@+id/imgSignInLogo"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="138dp">

            <!-- Fondo con radio -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/whiteradius_background" />

            <!-- Imagen de la gota -->
            <ImageView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gotita2"
                android:layout_gravity="center"/>

        </FrameLayout>
    </LinearLayout>


    <!-- Fondo Blanco -->
    <ImageView
        android:id="@+id/imgLogOutFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/fondo_blanco_sign_in"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/imgLogOutFondo"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <!-- Texto Registro -->
        <TextView
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/micuenta"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="32dp"
            android:textColor="@color/naranja"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@+id/imgLogOutFondo"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <!-- Texto Nombre -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="15dp"
                android:textColor="@color/azul_gris"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLogOutName"
                android:text="Admin"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@color/blanco"
                android:background="@drawable/campos_background"
                tools:ignore="MissingConstraints">
            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background" />

        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ajolote_halloween"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btnLogOutHomeOff"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:background="@drawable/boton_menu_on2"
            />

        <!-- Botón -->
        <Button
            android:id="@+id/btnLogOutLogOut"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/naranja"
            android:text="@string/cerrar_sesi_n"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btnLogOutStadistics"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:background="@drawable/grafico_off"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>